# supercar

./: CMakeLists.txt  Makefile  README.md  sdkconfig  sdkconfig.old
front/: config-overrides.js  package-lock.json  package.json
front/config/: webpack.config.js
front/src/: App.js  config.example.json  index.css  index.js
front/src/routes/: main_config.jsx  main_info.jsx  motor_config.jsx  proplusion_config.jsx
main/: CMakeLists.txt  cmd_mcpwm_motor.c  esp_hid_host.c  esp_hid_host.h  esp_rest_main.c  http_server.c  rest_server.c  supercar_config.c  supercar_config.h  supercar_main.c  supercar_main.h  supercar_motor.c  supercar_motor.h  supercar_sensor.c  supercar_sensor.h
partition_table/: partitionTable.csv
schema/: supercar-cache.lib  supercar.sch  supercar.sch-bak
